--- a/index.html
+++ b/index.html
@@ -5,82 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Unit-Converter</title>
-    <style>
-      body {
-        text-align: center;
-        background: lightcoral;
-        font-family: "Courier New", Courier, monospace;
-      }
-      input {
-        margin: auto;
-        width: 30%;
-        padding: 10px;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 15px;
-      }
-      .title {
-        margin: 20px;
-        padding: 20px;
-      }
-      .results {
-        margin: auto;
-        width: 30%;
-        padding: 20px;
-      }
-      .box1 {
-        background: lightseagreen;
-      }
-      .box2 {
-        background: lightskyblue;
-        margin: 20px 0 20px 0;
-      }
-      .box3 {
-        background: lightgoldenrodyellow;
-      }
-      .units,
-      #grams-result,
-      #pounds-result,
-      #stones-result {
-        display: inline-block;
-      }
-
-      input,
-      .box1,
-      .box2,
-      .box3 {
-        border-radius: 5px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">Unit Converter</h1>
-    <input id="kilo-input" type="number" placeholder="Enter your kilo" />
+    <div class="navigation">
+      <header>
+        <nav>
+          <ul>
+            <li><a href="#unit-converter">Unit Converter</a></li>
+            <li><a href="#bmi-calculator">BMI calculator</a></li>
+            <li><a href="#tip-calculator">Tip calculator</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
 
-    <div class="results">
-      <div class="box1">
-        <h3 class="units">Grams:</h3>
-        <div id="grams-result"></div>
-      </div>
-      <div class="box2">
-        <h3 class="units">Pounds:</h3>
-        <div id="pounds-result"></div>
-      </div>
-      <div class="box3">
-        <h3 class="units">Stones:</h3>
-        <div id="stones-result"></div>
+    <div class="unit-converter" id="unit-converter">
+      <h1 class="title">Unit Converter</h1>
+      <input id="kilo-input" type="number" placeholder="Enter your kilo" />
+
+      <div class="results">
+        <div class="box1">
+          <h3 class="units">Grams:</h3>
+          <div id="grams-result"></div>
+        </div>
+        <div class="box2">
+          <h3 class="units">Pounds:</h3>
+          <div id="pounds-result"></div>
+        </div>
+        <div class="box3">
+          <h3 class="units">Stones:</h3>
+          <div id="stones-result"></div>
+        </div>
       </div>
     </div>
-    <script>
-      document.getElementById("kilo-input").addEventListener("input", val => {
-        let kilos = val.target.value;
-        document.getElementById("grams-result").innerHTML = kilos * 1000;
-        document.getElementById("pounds-result").innerHTML = parseFloat(
-          kilos * 2.20462262185
-        ).toFixed(2);
-        document.getElementById("stones-result").innerHTML = parseFloat(
-          kilos / 6.35029318
-        ).toFixed(2);
-      });
-    </script>
+
+    <div class="bmi-calculator" id="bmi-calculator">
+      <h1 class="title">BMI Calculator</h1>
+      <input
+        id="weight-input"
+        type="number"
+        placeholder="Enter your weight in kilos"
+      />
+      <input
+        id="height-input"
+        type="number"
+        placeholder="Enter your height in meters. ex: 1.78"
+      />
+
+      <button id="bmi-calculate">Calculate</button>
+
+      <div id="bmi-result"></div>
+    </div>
+
+    <div class="tip-calculator" id="tip-calculator">
+      <h1 class="title">Tip Calculator</h1>
+
+      <input
+        id="bill-total"
+        type="number"
+        placeholder="Enter your bill total"
+      />
+
+      <input
+        id="percentage"
+        type="number"
+        placeholder="Enter the tip percentage"
+      />
+
+      <button id="tip-calculate">Calculate</button>
+
+      <div id="tip-result"></div>
+    </div>
   </body>
+  <script src="app.js"></script>
 </html>
